--- a/Jenkins/pom.xml
+++ b/Jenkins/pom.xml
@@ -15,17 +15,16 @@
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
-    <version>4.7.0</version>
+    <version>4.4.0</version>
 </dependency>
 
 </dependencies>
 
-  
-  <properties>
+<properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
-  <build>
+<build>
     
     <plugins>
       <plugin>
@@ -38,25 +37,27 @@
         </configuration>
       </plugin>
     </plugins>
+    
     <pluginManagement>
       <plugins>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M7</version>
+          
+          
           <configuration>
-                  <suiteXmlFiles>
-                     <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
-                  </suiteXmlFiles>
-               </configuration>
-            
+          <forkCount>0</forkCount>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+          
         </plugin>
       </plugins>
     </pluginManagement>
     
-    
   </build>
-  
 
 
 
